k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nezha-dash-pro
  namespace: nezha
  labels:
    app: nezha-dash-pro
spec:
  type: ClusterIP
  selector:
    app: nezha-dash-pro
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: websocket
      protocol: TCP
      port: 8081
      targetPort: 8081
